--- a/client/style.css
+++ b/client/style.css
@@ -1,30 +1,39 @@
 span {
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: normal;
 }
 
 pre {
     font-weight: bold;
-    color: #000000;
+    color: #ffffff;
     font-size: large;
 }
 
 body{
-    background-color: #82c4e2;
+    background-color: #444a4c;
 }
 
-h1 {
+h1 {    
+    color:white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-h2 {
+h2 {    
+    color:white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h3 {
+    color:white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
+    color:white;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#statusHeader, #statusText {
+    display: inline; /* or inline-block */
+    margin: 0; /* Optional: Remove default margins */
 }
