added more comments to explain code; renamed unclear variables

--- a/client/style.css
+++ b/client/style.css
@@ -34,6 +34,6 @@ p {
 }
 
 #statusHeader, #statusText {
-    display: inline; /* or inline-block */
-    margin: 0; /* Optional: Remove default margins */
+    display: inline;
+    margin: 0; 
 }
